@startuml
title Diagrama de clases - TP Facturacion (solo Modelos)
skinparam classAttributeIconSize 0

package Modelos {
  class Producto {
    + Id : int
    + Codigo : string
    + Nombre : string
    + Precio : decimal
    + Activo : bool
  }
  class Factura {
    + Id : int
    + Numero : int
    + Fecha : DateTime
    + ClienteNombre : string
    + ClienteDocumento : string
    + Total : decimal
    + Anulada : bool
    + FechaAnulacion : DateTime?
    + Detalles : List<FacturaDetalle>
    + RecalcularTotal() : void
  }
  class FacturaDetalle {
    + Id : int
    + FacturaId : int
    + ProductoId : int
    + CodigoProducto : string
    + NombreProducto : string
    + Cantidad : int
    + PrecioUnitario : decimal
    + Subtotal : decimal
    + Recalcular() : void
  }
  class InformeProducto {
    + ProductoId : int
    + Codigo : string
    + Nombre : string
    + CantidadFacturada : int
    + Monto : decimal
  }

  Factura "1" *-- "0..*" FacturaDetalle : contiene
  Producto "1" o-- "0..*" FacturaDetalle : referencia
  Producto "1" o-- "0..*" InformeProducto : resume
}

note bottom
  Solo entidades del dominio (Modelos/).
  Factura es raiz del agregado maestro-detalle.
  PrecioUnitario es copia historica del precio vigente.
  Producto preexiste: agregacion, no dueno. Informe es DTO agrupado por producto.
end note
@enduml
